--- a/fibonacci/src/App.css
+++ b/fibonacci/src/App.css
@@ -13,8 +13,8 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
+.App-body {
+  background-color: #1c1135;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,14 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-card {
+  color: black;
+  background-color: aliceblue;
+  width: 50vh;
+  min-height: 50vh;
+  padding: 2vh;
 }
 
 .App-link {
